--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1 style="text-align: center;">Simple File sharing App</h1>
+    <% if(locals.fileLink != null) { %>
+        <div style="margin-bottom: 2rem; text-align:center;">
+            Your File is downloaded<br/>
+            <a href="<%= locals.fileLink %>"><%= locals.fileLink %></a>
+        </div>
+        <%   } %>
     <form action="/upload" method="post" style="display: grid; gap:0.5rem; grid-template-columns:auto 1fr; max-width: 500px; margin: 0 auto;" enctype="multipart/form-data">
         <label for="file">File:</label>
         <input type="file" id="file" name="file" required />
